Added permissions & improved formatting